--- a/WCHProjects/Moduls/Login/controllers/LoginViewController.xib
+++ b/WCHProjects/Moduls/Login/controllers/LoginViewController.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
+                <outlet property="checkBtn" destination="ka4-h5-Nxb" id="yEw-w4-YXz"/>
                 <outlet property="codeBtn" destination="0OF-Mx-CrS" id="A80-qi-OFe"/>
                 <outlet property="loginBtn" destination="a1M-Je-u3a" id="oab-LG-hwV"/>
                 <outlet property="passwordTxtF" destination="KwH-zv-hKB" id="5uI-NA-c3Y"/>
@@ -120,9 +121,9 @@
                         <action selector="loginBtnAction:" destination="-1" eventType="touchUpInside" id="jsb-Cb-Ojc"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ka4-h5-Nxb">
-                    <rect key="frame" x="15" y="359" width="215" height="26"/>
-                    <state key="normal">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ka4-h5-Nxb">
+                    <rect key="frame" x="15" y="359" width="235" height="20"/>
+                    <state key="normal" image="loginchecked">
                         <attributedString key="attributedTitle">
                             <fragment content="同意">
                                 <attributes>
@@ -139,6 +140,7 @@
                         </attributedString>
                     </state>
                     <connections>
+                        <action selector="checkBtnAction:" destination="-1" eventType="touchUpInside" id="8pw-4j-loh"/>
                         <action selector="yuedingBtnAction:" destination="-1" eventType="touchUpInside" id="hcp-Or-pLb"/>
                     </connections>
                 </button>
@@ -175,6 +177,7 @@
         </view>
     </objects>
     <resources>
+        <image name="loginchecked" width="20" height="20"/>
         <image name="logo" width="91" height="131"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
